--- a/_sass/_listen.scss
+++ b/_sass/_listen.scss
@@ -9,18 +9,16 @@
 		margin: 10px 0;
 		@include span-columns(8);
 		@include shift(2);
-		@include media(max-width 682px) {
-		@include span-columns(12);
-	}
+
 	}
 }
 
 .audioplayer {
 	@include span-columns(8);
 	@include shift(2);
-	@include media(max-width 682px) {
-		@include span-columns(12);
-	}
+	//@include media(max-width 682px) {
+		//@include span-columns(12);
+	//}
 	height: 2.5em;
 	/* 40 */
 	color: #fff;
